--- a/site/app/views/styleguide/home.html.haml
+++ b/site/app/views/styleguide/home.html.haml
@@ -23,7 +23,7 @@
             %li= link_to "Console", "console"
             %li= link_to "Community", "community"
 
-    .messaging
+    .messaging.messaging-home
       .container
         .primary
           Develop and Scale 
@@ -59,7 +59,6 @@
               %img{:src => 'scale.png'}
               %h4 Scale easily in any language
               %p Grow your Java, Perl, Ruby, Python, and Node.js apps easily with resource scaling.
-        %p.gutter= link_to "Learn about OpenShift...", "learn"
       .span6
         %ul.news.unstyled
           %li
@@ -70,6 +69,10 @@
             = link_to "news", :class => 'link-tile' do
               %h4 New OpenShift Express upgrade - March 12
               %p We pushed a minor Express upgrade today, including some bug fixes and general UI enhancements. We've added a preview section to the app
+    .row
+      .span6
+        %p.gutter= link_to "Learn about OpenShift...", "learn"
+      .span6
         %p.gutter= link_to "Read the OpenShift blog...", "blog"
 
 #buzz
@@ -81,22 +84,38 @@
             Check the 
             %strong Buzz
           %hr
-          .row
+          .row-fluid
             .span6
-              %quote Testimonial 1
-              %quote Testimonial 2
-              = link_to "community" do
+              %blockquote
+                %p Testimonial 1
+                %small Some person
+              %blockquote 
+                %p Testimonial 2
+                %small Some other person
+            .span6
+              .tweet
+                %img{:src => '/app/images/redhat.png'}
+                %p Twitter post 1
+                %small Some person
+              .tweet
+                %img{:src => '/app/images/redhat.png'}
+                %p Twitter post 2
+                %small Some other person
+
+          .row-fluid
+            .span6
+              = link_to "community", :class => 'link-with-action' do
                 %strong Join
                 our community
             .span6
-              %quote Twitter post 1
-              %quote Twitter post 2
-              = link_to "follow" do
-                %strong Follow
-                OpenShift
-              = link_to "feed" do
-                %strong More
-                OpenShift buzz
+              .align-right
+                = link_to "follow", :class => 'link-with-action' do
+                  %strong Follow
+                  OpenShift
+              .align-right
+                = link_to "feed", :class => 'link-with-action' do
+                  %strong More
+                  = "#OpenShift buzz"
 
           .callout
             .one Look for team
