Comments, various small tweaks to community CSS

--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -427,3 +427,15 @@ a:hover, a:active { color: $ribbonColor; }
     min-width: 30%;
   }
 }
+
+.views-field-rss { float: right; }
+.views-field-title { font-size: 16px; line-height: 20px; }
+.views-field-picture { float: left; margin-right: 6px; }
+.view-forum-list .views-field-picture { float: right; margin-left: 6px; }
+.block-stats div { display: inline; }
+.views-table .views-field-pageviews { white-space: nowrap; }
+.views-field-group-name { display: inline; }
+.view-threads-by-popularity .views-table h4 { display: inline; }
+.view-threads-by-popularity .views-table > div { margin-bottom: 10px; }
+.block { @include clearfix(); margin-bottom: 20px; }
+.column-nav .block .item-list { margin-left: $gridGutterWidth; }
