Fixed link for user guide to point to html version

--- a/site/app/views/applications/index.html.haml
+++ b/site/app/views/applications/index.html.haml
@@ -44,7 +44,7 @@
       %h5 OpenShift Express Help
       %ul.unstyled
         %li 
-          %a{:href => 'https://www.redhat.com/openshift/community/sites/default/files/documents/OpenShift_Express-User_Guide-en-US.pdf', :target => '_blank'} OpenShift Express User Guide
+          %a{:href => 'http://docs.redhat.com/docs/en-US/OpenShift_Express/2.0/html/User_Guide/index.html', :target => '_blank'} OpenShift Express User Guide
         %li 
           %a{:href => 'https://www.redhat.com/openshift/community/kb/kb-e1000/installing-openshift-express-client-tools-on-non-rpm-based-systems', :target => '_blank'} Installing OpenShift Express client tools on Mac OSX, Linux, and Windows
         %li 
