Fixes 798502: added links to docs

--- a/site/app/stylesheets/console.scss
+++ b/site/app/stylesheets/console.scss
@@ -118,6 +118,7 @@ section#app-cartridges .cartridge-block {
 	#my-apps li h2 {
 		float: right;
 		}
+	section#console-mast .row ul.unstyled-flat li.span7.right { text-align: left; } 
 }
 @media (min-width: 768px) and (max-width: 980px) {
 	#my-apps li h2 {
