--- a/site/app/views/applications/index.html.haml
+++ b/site/app/views/applications/index.html.haml
@@ -44,15 +44,15 @@
       %h5 OpenShift Express Help
       %ul.unstyled
         %li 
-          %a{:href => 'http://docs.redhat.com/docs/en-US/OpenShift_Express/2.0/html/User_Guide/index.html', :target => '_blank'} OpenShift Express User Guide
+          %a{:href => user_guide, :target => '_blank'} OpenShift Express User Guide
         %li 
-          %a{:href => 'https://www.redhat.com/openshift/community/kb/kb-e1000/installing-openshift-express-client-tools-on-non-rpm-based-systems', :target => '_blank'} Installing OpenShift Express client tools on Mac OSX, Linux, and Windows
+          %a{:href => install_cli_knowledge_base_url, :target => '_blank'} Installing OpenShift Express client tools on Mac OSX, Linux, and Windows
         %li 
-          %a{:href => 'https://www.redhat.com/openshift/community/kb/kb-e1005-ruby-on-rails-express-quickstart-guide', :target => '_blank'} Ruby on Rails Express Quickstart Guide
+          %a{:href => rails_quickstart_guide, :target => '_blank'} Ruby on Rails Express Quickstart Guide
         %li 
           %a{:href => 'https://www.redhat.com/openshift/community/kb/kb-e1018-how-can-i-add-jboss-modules-to-an-express-app', :target => '_blank'} How can I add JBoss modules to an Express App
         %li 
-          %a{:href => '#', :target => '_blank'} Sync your OpenShift repo with an existing Git repo
+          %a{:href => sync_git_with_remote_repo_knowledge_base_url, :target => '_blank'} Sync your OpenShift repo with an existing Git repo
         %li 
           %a{:href => 'https://www.redhat.com/openshift/community/', :target => '_blank'} More help »
           
