--- a/site/app/views/applications/show.html.haml
+++ b/site/app/views/applications/show.html.haml
@@ -70,7 +70,7 @@
         %li 
           %a{:href => 'https://www.redhat.com/openshift/community/sites/default/files/documents/OpenShift_Express-User_Guide-en-US.pdf'} OpenShift Express User Guide
         %li 
-          %a{:href => '#'} Sync your OpenShift repo with an existing Git repo
+          %a{:href => sync_git_with_remote_repo_knowledge_base_url} Sync your OpenShift repo with an existing Git repo
         - if @application_type.help_topics and not @application_type.help_topics.empty?
           %h5= @application.framework_name + ' Help'
           %ul.unstyled
