Fixed gutters to be more accurate within various resolutions, lines up exactly with ipad screen.

--- a/site/app/stylesheets/_responsive.scss
+++ b/site/app/stylesheets/_responsive.scss
@@ -161,13 +161,13 @@
 @media (min-width: 768px) and (max-width: 979px) {
 
   // Fixed grid
-  @include gridSystem-generate(12, 42px, 20px);
+  @include gridSystem-generate(12, $gridColumnWidthTablet, $gridGutterWidthTablet);
 
   // Fluid grid
   @include fluidGridSystem-generate(12, 5.801104972%, 2.762430939%);
 
   // Input grid
-  @include inputGridSystem-generate(12, 42px, 20px);
+  @include inputGridSystem-generate(12, $gridColumnWidthTablet, $gridGutterWidthTablet);
 
 }
 
@@ -314,20 +314,20 @@
 @media (min-width: 1200px) {
 
   // Fixed grid
-  @include gridSystem-generate(12, 70px, 30px);
+  @include gridSystem-generate(12, $gridColumnWidthLarge, $gridGutterWidthLarge);
 
   // Fluid grid
   @include fluidGridSystem-generate(12, 5.982905983%, 2.564102564%);
 
   // Input grid
-  @include inputGridSystem-generate(12, 70px, 30px);
+  @include inputGridSystem-generate(12, $gridColumnWidthLarge, $gridGutterWidthLarge);
 
   // Thumbnails
   .thumbnails {
-    margin-left: -30px;
+    margin-left: -$gridGutterWidthLarge;
   }
   .thumbnails > li {
-    margin-left: 30px;
+    margin-left: $gridGutterWidthLarge;
   }
 
 }
