--- a/site/app/stylesheets/_variables.scss
+++ b/site/app/stylesheets/_variables.scss
@@ -1,3 +1,18 @@
+$responsivePhone:         480px;
+$responsiveTablet:        768px;
+$responsiveDefault:       980px;
+$responsiveLarge:         1200px;
+
+$gridGutterWidth:         28px;
+$gridColumnWidth:         50px; // 80 * 12 = 960
+
+$gridGutterWidthTablet:   20px;
+$gridColumnWidthTablet:   42.5px; // 62 * 12 = 744 and 12px gutters
+
+$gridGutterWidthLarge:    30px;
+$gridColumnWidthLarge:    60px;
+
+
 $cliText:                   #000C5A;
 $cliBackground:             #E9ECFF;
 
