--- a/site/public/stylesheets/console.css
+++ b/site/public/stylesheets/console.css
@@ -95,15 +95,21 @@ section#app-cartridges > header {
 
   #my-apps li h2 {
     float: none; } }
+
 @media (max-width: 768px) {
   #my-apps li h2 {
     float: right; } }
+
 @media (min-width: 768px) and (max-width: 980px) {
   #my-apps li h2 {
     float: none; }
 
   #my-apps .status {
     position: static; } }
+
+@media (max-width: 980px) {}
+@media (min-width: 980px) {}
+@media (min-width: 1200px) {}
 .show-grid [class*="span"] {
   background-color: #c0ddf3;
   margin-bottom: 1px; }
