Pixel-perfect layout adjustments

--- a/site/app/views/control_panel/index.html.haml
+++ b/site/app/views/control_panel/index.html.haml
@@ -16,7 +16,7 @@
   .content
 
     .alert.alert-info.new-console{:style => 'margin-top: 25px; padding: 10px 0; border-bottom: 1px solid #555; border-top: 1px solid #555;'}
-      %h3= link_to "Preview the new OpenShift Management Console >>", console_path
+      %h3= link_to "Preview the new OpenShift Management Console »", console_path
       %p
         The new console will replace the control panel and offer a much deeper web experience for 
         OpenShift application management.  We wanted to share a preview of the changes that are coming, but 
