--- a/site/app/views/styleguide/home.html.haml
+++ b/site/app/views/styleguide/home.html.haml
@@ -35,12 +35,12 @@
   .container
     .row
       = link_to "signup", :class => 'take-action span12' do
-        .pull-left
+        .pull-right
+          Try it out >
+        %div
           Create your 
           %strong first three apps 
           for free
-        .pull-right
-          Try it out >
 
       .span6
         %ul.learn.unstyled
