--- a/site/public/stylesheets/site.css
+++ b/site/public/stylesheets/site.css
@@ -82,7 +82,7 @@ a:hover, a:active {
   background-color: #f2f2f2; }
 
 .column-buzz {
-  background-color: black;
+  background-color: #030303;
   color: white; }
 
 .column-buzz a {
@@ -219,7 +219,7 @@ a:hover, a:active {
 
 @media (max-width: 767px) {
   #content > .container > div > .row {
-    background-color: black; }
+    background-color: white; }
 
   .messaging {
     text-align: left;
@@ -346,7 +346,7 @@ a:hover, a:active {
   width: 120px;
   height: 120px;
   background-color: white;
-  color: black;
+  color: white;
   top: -60px;
   right: -60px;
   text-align: center; }
