--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -511,6 +511,57 @@ a:hover, a:active { color: $ribbonColor; }
 }
 .clear-block { @include clearfix(); }
 
+.view-nodes-by-category article.blog {
+  margin-bottom: 25px;
+
+  > h2 { line-height: 25px; }
+
+  > .breadcrumb {
+    margin-bottom: 5px;
+    text-transform: uppercase;
+    font-weight: bold;
+
+    > .creator { color: black; }
+    > .created { color: #888; }
+
+  }
+
+  .nid a { font-size: 16px; }
+
+  > .nid_1 {
+    text-transform: uppercase;
+    text-align: right;
+    padding-bottom: 3px;
+    border-bottom: 1px solid #aaa;
+    font-size: 11px;
+    > a {
+      color: #888;
+    }
+  }
+}
+
+.comment { margin-bottom: 20px; padding-top: 8px; border-top: 1px solid #ddd; }
+.comment > table td { vertical-align: top; }
+.comment .comment-author {
+  .views-row {
+    padding: 10px; 
+    width: 170px;
+    margin-right: 10px;
+    margin-top: 5px;
+    background-color: rgb(239, 239, 239);
+    &:hover .views-field-value { height: 100%; }
+    &:hover .views-field-phpcode:after { content: none; }
+  }
+  .views-field-phpcode {
+    clear: both;
+    &:after { content: '...'; }
+  }
+  .views-field-value {
+    height: 0px;
+    overflow: hidden;
+  }
+}
+
 /* copied from system.css */
 html.js fieldset.collapsed {
     border-bottom-width: 0;
